--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "icon_path": "C:\\Users\\rust\\PycharmProjects\\blblCat\\ui\\television.ico",
-  "tray_icon_path": "C:\\Users\\rust\\PycharmProjects\\blblCat\\ui\\tray_icon.png",
-  "opacity": 0.2,
+  "icon_path": "ui/television.ico",
+  "tray_icon_path": "ui/tray_icon.png",
+  "opacity": 0.20000000000000004,
   "font_size": 20,
   "ban_words": [],
   "BiliSocket": {
