修改路径错误

--- a/TempConfig/config.json
+++ b/TempConfig/config.json
@@ -1,6 +1,6 @@
 {
-  "icon_path": "C:\\Users\\rust\\PycharmProjects\\blblCat\\ui\\television.ico",
-  "tray_icon_path": "C:\\Users\\rust\\PycharmProjects\\blblCat\\ui\\tray_icon.png",
+  "icon_path": "ui/television.ico",
+  "tray_icon_path": "ui/tray_icon.png",
   "opacity": 0.2,
   "font_size": 20,
   "ban_words": [],
